--- a/public/modules/levels/css/levels.less
+++ b/public/modules/levels/css/levels.less
@@ -77,10 +77,6 @@
     text-align: left;
     width: 25%;
 
-    .btn {
-        float: right;
-    }
-
     .list-group-item-heading {
         display: inline-block;
         font-size: 2em;
@@ -143,6 +139,10 @@
 .pending {
     background-color: @pendingColor;
     transition: background-color .5s;
+}
+
+.queryInput {
+    display: inline-block;
 }
 
 .searchText {
